@@ -1569,6 +1569,16 @@ Wed Jul  9 11:45:02 CEST 2003
 	- Made all Informix functions honor Informix NULLs.
 	- Extended compatibility functions for INFORMIX handling of DECLARE
 	  statement to work with indicators.
+	  
+Mon Jul 14 09:34:04 CEST 2003
+
+	- Synced preproc.y with gram.y
+	- Init sqlca in ECPGprepare().
+	- Added CLOSE DATABASE for Informix compatibility.
+	
+Tue Jul 15 14:28:53 CEST 2003
+
+	_ Started to add error codes for backend error messages.
 	- Set ecpg version to 3.0.0
 	- Set ecpg library to 4.0.0
 	- Set pgtypes library to 1.0.0
